--- a/app/globals.css
+++ b/app/globals.css
@@ -96,6 +96,11 @@ button[type='submit']:disabled,
   transition: all 0.5s;
 }
 
+.btn {
+  @apply flex justify-center gap-2 text-gray-600 font-semibold;
+  @apply border border-gray-300 rounded px-6 py-2 hover:text-gray-900;
+}
+
 .hamburger-middle {
   transform: translateY(7px);
 }
@@ -148,4 +153,10 @@ button[type='submit']:disabled,
 
 .animate-link:nth-child(3) {
   animation-delay: 0.3s;
+}
+.animate-link:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.animate-link:nth-child(5) {
+  animation-delay: 0.5s;
 }
