--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background: var(--background-image);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
